...
                      ),
                    ),
                    Container(
                      alignment: Alignment.center,
                      width: 0.8 * w,
                      child: TextFormField(
                        key: const Key('emailFieldLogin'),
                        controller: emailController,
                        textInputAction: TextInputAction.next,
                        decoration: InputDecoration(
                          labelText: AppLocalizations.of(context)!.email,
                          labelStyle: TextStyle(
                              fontSize: (w > 490 && h > 720) ? 25 : 14),
...
                    ),
                    //SizedBox(height: size.height * 0.001),
                    Container(
                      alignment: Alignment.center,
                      width: 0.8 * w,
                      child: TextFormField(
                        key: const Key('passwordFieldLogin'),
                        controller: passwordController,
                        textInputAction: TextInputAction.next,
                        decoration: InputDecoration(
                          labelText: AppLocalizations.of(context)!.password,
                          labelStyle: TextStyle(
                              fontSize: (w > 490 && h > 720) ? 25 : 14),
...
                    Container(
                      margin: EdgeInsets.only(
                          top: 0.03 * h, left: 0.03 * h, right: 0.03 * h),
                      height: 0.08 * h,
                      width: 0.8 * w,
                      child: ElevatedButton(
                          key: const Key('loginButton'),
                          onPressed: signIn,
                          style: ElevatedButton.styleFrom(
                            backgroundColor:
                                const Color.fromARGB(255, 233, 64, 87),
                            shape: RoundedRectangleBorder(
                              borderRadius: BorderRadius.circular(20),
...
