...
                        stream: readNot(),
                        builder: ((context, snapshot) {
                          if (snapshot.hasData) {
                            List<Notifications> notifications = snapshot.data!;
                            if (notifications.isNotEmpty) {
                              return IconButton(
                                key: const Key('notificationButton'),
                                icon: badges.Badge(
                                  position:
                                      BadgePosition.topEnd(top: 0, end: 0),
                                  showBadge: true,
                                  child: const Icon(
                                    Icons.notifications,
...
