...
                  return Column(
                    children: [
                      SizedBox(
                        height: 5,
                      ),
                      InkWell(
                          key: Key("chatElement"),
                          onTap: () {
                            if (isTabletLandscape) {
                              setState(() {
                                chatOpened = chat;
                                reciverOpened = users.first;
                              });
...
