...
                                onPressed: () {
                                  showModalBottomSheet(
                                      showDragHandle: true,
                                      context: context,
                                      isScrollControlled: true,
                                      builder: (context) => Container(
                                        key: Key('attachGPS'),
                                              child: Wrap(children: [
                                            ListTile(
                                              onTap: () async {
                                                bool perm =
                                                    await checkPermission();
                                                if (perm) {
...
